# livelingua

./: .env.example  CONTRIBUTING.md  README.md  config.example.yaml  pyproject.toml
examples/: advanced.py  basic.py
src/: __main__.py  core.py  health.py  utils.py
src/livelingua/: __init__.py  cli.py  models.py  report.py
src/livelingua/languages/: __init__.py  detector.py  registry.py
src/livelingua/translator/: __init__.py  engine.py  glossary.py  realtime.py
tests/: test_benchmark.py  test_core.py  test_integration.py  test_livelingua.py
